@@ -1,3 +1,9 @@
+2004-11-24  Christian Ruppert <arc@users.sf.net>
+	* uwm/windows.c(MoveResizeWindow): fixed bug that windows with static
+	  gravity aren't properly moved/resized.
+	* uwm/handlers.c(HandleFocusOut): fixed bug that sometimes erroneously
+	  displayed new windows as if they had the focus although they had not.
+
 2004-11-14  Christian Ruppert <arc@users.sf.net>
 	* uwm/confparse.tab.y: removed a segfault on unexpected end of file.
 	* uwm/confparse.tab.y: removed all reduce/reduce conflicts.
